Reviewed and cleaned up issues in ccsSearch service